--- a/debian.headless-both/control
+++ b/debian.headless-both/control
@@ -3,7 +3,7 @@ Section: non-free/java
 Priority: optional
 Maintainer: Janusz Dziemidowicz <rraptorr@nails.eu.org>
 Homepage: http://www.oracle.com/technetwork/java/javase/downloads/index.html
-Build-Depends: debhelper (>= 6), lsb-release, unzip, bzip2, patch, libasound2, unixodbc, libx11-6, libxext6, libxi6, libxt6, libxtst6, lib32asound2 [amd64], ia32-libs [amd64]
+Build-Depends: debhelper (>= 6), lsb-release, unzip, bzip2, patch, unixodbc, libx11-6, libxext6, libxi6, libxt6, libxtst6, ia32-libs [amd64]
 Standards-Version: 3.9.3
 
 Package: sun-java6-jre
