--- a/debian.full-both/JB-archive.keys.in
+++ b/debian.full-both/JB-archive.keys.in
@@ -1,18 +1,18 @@
 application/java-archive
         description=Java Archive
-        icon_filename=sun-java
+        icon_filename=oracle-java
         default_action_type=application
         default_application_id=java-archive
         short_list_application_user_additions=java-archive
 application/x-java-archive
         description=Java Archive
-        icon_filename=sun-java
+        icon_filename=oracle-java
         default_action_type=application
         default_application_id=java-archive
         short_list_application_user_additions=java-archive
 application/x-jar
         description=Java Archive
-        icon_filename=sun-java
+        icon_filename=oracle-java
         default_action_type=application
         default_application_id=java-archive
         short_list_application_user_additions=java-archive
