--- a/debian.full-both/JB-web-start.keys.in
+++ b/debian.full-both/JB-web-start.keys.in
@@ -1,6 +1,6 @@
 application/x-java-jnlp-file
         description=Java Web Start Application@ia32txt@
-        icon_filename=sun-java
+        icon_filename=oracle-java
         default_action_type=application
         default_application_id=java-web-start
         short_list_application_user_additions=java-web-start
