--- a/debian.full-both/control
+++ b/debian.full-both/control
@@ -1,4 +1,4 @@
-Source: sun-java6
+Source: oracle-java6
 Section: non-free/java
 Priority: optional
 Maintainer: Janusz Dziemidowicz <rraptorr@nails.eu.org>
@@ -6,47 +6,47 @@ Homepage: http://www.oracle.com/technetwork/java/javase/downloads/index.html
 Build-Depends: debhelper (>= 6), lsb-release, unzip, bzip2, patch, libasound2, unixodbc, libx11-6, libxext6, libxi6, libxt6, libxtst6, lib32asound2 [amd64], ia32-libs [amd64]
 Standards-Version: 3.9.3
 
-Package: sun-java6-jre
+Package: oracle-java6-jre
 Section: non-free/java
 Architecture: all
 Provides: java-virtual-machine, java-runtime, java2-runtime, java5-runtime, java6-runtime, java-runtime-headless, java2-runtime-headless, java5-runtime-headless, java6-runtime-headless
-Depends: java-common (>= 0.28), locales, sun-java6-bin (>= ${source:Version}) | ia32-sun-java6-bin (>= ${source:Version}), ${misc:Depends}
+Depends: java-common (>= 0.28), locales, oracle-java6-bin (>= ${source:Version}) | ia32-oracle-java6-bin (>= ${source:Version}), ${misc:Depends}
 Recommends: gsfonts-x11
-Suggests: sun-java6-plugin, sun-java6-fonts, ttf-baekmuk | ttf-unfonts-core, ttf-kochi-gothic | ttf-sazanami-gothic, ttf-kochi-mincho | ttf-sazanami-mincho, ttf-arphic-uming,
-Replaces: sun-java6-bin, ia32-sun-java6-bin
-Description: Sun Java(TM) Runtime Environment (JRE) 6 (architecture independent files)
- The Sun Java Platform Standard Edition Runtime Environment (JRE) 6
+Suggests: oracle-java6-plugin, oracle-java6-fonts, ttf-baekmuk | ttf-unfonts-core, ttf-kochi-gothic | ttf-sazanami-gothic, ttf-kochi-mincho | ttf-sazanami-mincho, ttf-arphic-uming,
+Replaces: oracle-java6-bin, ia32-oracle-java6-bin
+Description: Oracle Java(TM) Runtime Environment (JRE) 6 (architecture independent files)
+ The Oracle Java Platform Standard Edition Runtime Environment (JRE) 6
  contains the Java virtual machine, runtime class libraries, and 
  Java application launcher that are necessary to run programs written 
  in the Java progamming language. It is not a development environment and
  doesn't contain development tools such as compilers or debuggers.
  For development tools, see the Java Development Kit JDK(TM) 6
- (package sun-java6-jdk).
+ (package oracle-java6-jdk).
  .
  This package contains architecture independent files.
 
-Package: sun-java6-bin
+Package: oracle-java6-bin
 Section: non-free/java
 Architecture: amd64 i386
-Depends: sun-java6-jre (>= ${source:Version}), ${odbc:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Depends: oracle-java6-jre (>= ${source:Version}), ${odbc:Depends}, ${shlibs:Depends}, ${misc:Depends}
 Recommends: ${shlibs:Recommends}
 Suggests: binfmt-support
-Description: Sun Java(TM) Runtime Environment (JRE) 6 (architecture dependent files)
- The Sun Java Platform Standard Edition Runtime Environment (JRE) 6
+Description: Oracle Java(TM) Runtime Environment (JRE) 6 (architecture dependent files)
+ The Oracle Java Platform Standard Edition Runtime Environment (JRE) 6
  contains the Java virtual machine, runtime class libraries, and 
  Java application launcher that are necessary to run programs written 
  in the Java progamming language. It is not a development environment and
  doesn't contain development tools such as compilers or debuggers.
  For development tools, see the Java Development Kit JDK(TM) 6
- (package sun-java6-jdk).
+ (package oracle-java6-jdk).
  .
  This package contains architecture dependent files.
 
-Package: sun-java6-plugin
+Package: oracle-java6-plugin
 Architecture: amd64 i386
 Section: non-free/web
 Priority: optional
-Depends: ${shlibs:Depends}, ${misc:Depends}, sun-java6-bin (>= ${source:Version}), firefox | firefox-2 | iceweasel | mozilla-firefox | iceape-browser | mozilla-browser | epiphany-gecko | epiphany-webkit | epiphany-browser | galeon | midbrowser | konqueror | chromium-browser | midori | google-chrome
+Depends: ${shlibs:Depends}, ${misc:Depends}, oracle-java6-bin (>= ${source:Version}), firefox | firefox-2 | iceweasel | mozilla-firefox | iceape-browser | mozilla-browser | epiphany-gecko | epiphany-webkit | epiphany-browser | galeon | midbrowser | konqueror | chromium-browser | midori | google-chrome
 Xb-Npp-Applications: ec8030f7-c20a-464f-9b0e-13a3a9e97384, 92650c4d-4b8e-4d2a-b7eb-24ecf4f6b63a 
 Xb-Npp-Name: The Java(TM) Plug-in, Java SE 6
 Xb-Npp-MimeType: application/x-java-vm, application/x-java-applet, application/x-java-applet;version=1.1, application/x-java-applet;version=1.1.1, application/x-java-applet;version=1.1.2, application/x-java-applet;version=1.1.3, application/x-java-applet;version=1.2, application/x-java-applet;version=1.2.1, application/x-java-applet;version=1.2.2, application/x-java-applet;version=1.3, application/x-java-applet;version=1.3.1, application/x-java-applet;version=1.4, application/x-java-applet;version=1.4.1, application/x-java-applet;version=1.4.2, application/x-java-applet;version=1.5, application/x-java-applet;version=1.6, application/x-java-applet;jpi-version=1.6.0_35, application/x-java-bean, application/x-java-bean;version=1.1, application/x-java-bean;version=1.1.1, application/x-java-bean;version=1.1.2, application/x-java-bean;version=1.1.3, application/x-java-bean;version=1.2, application/x-java-bean;version=1.2.1, application/x-java-bean;version=1.2.2, application/x-java-bean;version=1.3, application/x-java-bean;version=1.3.1, application/x-java-bean;version=1.4, application/x-java-bean;version=1.4.1, application/x-java-bean;version=1.4.2, application/x-java-bean;version=1.5, application/x-java-bean;version=1.6, application/x-java-bean;jpi-version=1.6.0_35, application/x-java-vm-npruntime
@@ -58,38 +58,38 @@ Description: Java(TM) Plug-in, Java SE 6
  This is a metapackage containing dependencies for running Java in 
  various browsers.
 
-Package: ia32-sun-java6-bin
+Package: ia32-oracle-java6-bin
 Section: non-free/java
 Architecture: amd64
-Depends: sun-java6-jre (>= ${source:Version}), ia32-libs, ${shlibs:Depends}, ${odbc:Depends}, ${misc:Depends}
+Depends: oracle-java6-jre (>= ${source:Version}), ia32-libs, ${shlibs:Depends}, ${odbc:Depends}, ${misc:Depends}
 Recommends: ${shlibs:Recommends}, ia32-libs-gtk
-Description: Sun Java(TM) Runtime Environment (JRE) 6 (32-bit)
- The Sun Java Platform Standard Edition Runtime Environment (JRE) 6
+Description: Oracle Java(TM) Runtime Environment (JRE) 6 (32-bit)
+ The Oracle Java Platform Standard Edition Runtime Environment (JRE) 6
  contains the Java virtual machine, runtime class libraries, and 
  Java application launcher that are necessary to run programs written 
  in the Java progamming language. It is not a development environment and
  doesn't contain development tools such as compilers or debuggers.
  For development tools, see the Java Development Kit JDK(TM) 6
- (package sun-java6-jdk).
+ (package oracle-java6-jdk).
  .
  This package contains architecture dependent files for ia32.
 
-Package: sun-java6-fonts
+Package: oracle-java6-fonts
 Section: non-free/fonts
 Architecture: all
-Depends: sun-java6-jre (>= ${source:Version}), ${misc:Depends}
+Depends: oracle-java6-jre (>= ${source:Version}), ${misc:Depends}
 Provides: ttf-lucida
 Conflicts: ttf-lucida
-Description: Lucida TrueType fonts (from the Sun JRE)
- The Lucida fonts are included in the sun-java6-jre package.
+Description: Lucida TrueType fonts (from the Oracle JRE)
+ The Lucida fonts are included in the oracle-java6-jre package.
  This package makes the fonts available to system.
 
-Package: sun-java6-jdk
+Package: oracle-java6-jdk
 Architecture: amd64 i386
-Depends: sun-java6-bin (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
-Suggests: default-jdk-doc, sun-java6-source
+Depends: oracle-java6-bin (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
+Suggests: default-jdk-doc, oracle-java6-source
 Provides: java-compiler, java2-compiler, java-sdk, java2-sdk, java5-sdk, java6-sdk
-Description: Sun Java(TM) Development Kit (JDK) 6
+Description: Oracle Java(TM) Development Kit (JDK) 6
  The JDK(TM) is a development environment for building applications, 
  applets, and components using the Java programming language.
  .
@@ -97,23 +97,23 @@ Description: Sun Java(TM) Development Kit (JDK) 6
  written in the Java programming language and running on the Java 
  Platform.
 
-Package: sun-java6-source
+Package: oracle-java6-source
 Architecture: all
-Depends: sun-java6-jdk (>= ${source:Version}), ${misc:Depends}
-Description: Sun Java(TM) Development Kit (JDK) 6 source files
+Depends: oracle-java6-jdk (>= ${source:Version}), ${misc:Depends}
+Description: Oracle Java(TM) Development Kit (JDK) 6 source files
  The JDK(TM) is a development environment for building applications, 
  applets, and components using the Java programming language.
  .
  This package contains the Java programming language source 
  files (src.zip) for all classes that make up the Java core API.
 
-Package: sun-java6-javadb
+Package: oracle-java6-javadb
 Architecture: all
 Section: non-free/java
-Depends: sun-java6-jdk (>= ${source:Version}), ${misc:Depends}
-Enhances: sun-java6-jdk
-Description: Java(TM) DB, Sun Microsystems' distribution of Apache Derby
- Java DB is Sun's supported distribution of the open source Apache 
+Depends: oracle-java6-jdk (>= ${source:Version}), ${misc:Depends}
+Enhances: oracle-java6-jdk
+Description: Java(TM) DB, the Oracle distribution of Apache Derby
+ Java DB is the Oracle supported distribution of the open source Apache 
  Derby 100% Java technology database. It is fully transactional, secure, 
  easy-to-use, standards-based -- SQL, JDBC API, and Java EE -- yet small, 
  only 2MB.
